crates/agglayer-config/tests/snapshots/backup__backup_enabled.snap
---
source: crates/agglayer-config/tests/backup.rs
expression: "$crate :: toml_snapshot_string(& config)"
---
proof-wrapping = "groth16"
prover-buffer-size = 100

[full-node-rpcs]

[l2]
rpc-timeout = "45s"

[proof-signers]

[log]
level = "info"
outputs = []
format = "pretty"

[rpc]
grpc-port = 9089
readrpc-port = 9090
admin-port = 9091
host = "0.0.0.0"
request-timeout = "3m"

[rate-limiting]
send-tx = "unlimited"

[rate-limiting.network]

[l1]
chain-id = 1337
node-url = "http://zkevm-mock-l1-network:8545/"
ws-node-url = "ws://zkevm-mock-l1-network:8546/"
connect-attempt-timeout = "3s"
rollup-manager-contract = "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
polygon-zkevm-global-exit-root-v2-contract = "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
rpc-timeout = "45s"
event-filter-block-range = 10000

[auth.local]
private-keys = []

[telemetry]
prometheus-addr = "0.0.0.0:3000"

[epoch.block-clock]
epoch-duration = 6
genesis-block = 0

[shutdown]
runtime-timeout = "5s"

[certificate-orchestrator]
input-backpressure-buffer-size = 1000

[certificate-orchestrator.prover.sp1-local]

[storage]
db-path = "/tmp/agglayer/tests/fixtures/valide_config/storage"

[storage.backup]
path = "./test/"
state-max-backup-count = 100
pending-max-backup-count = 100

[prover.network-prover]
proving-timeout = "5m"
sp1-cluster-endpoint = "https://rpc.production.succinct.xyz/"

[grpc]

[settlement.pessimistic-proof-tx-config]
confirmations = 12
settlement-policy = "SafeBlock"
gas-limit-ceiling = "0x3938700"
max-fee-per-gas-ceiling = "100gwei"
max-priority-fee-per-gas-ceiling = "100gwei"

[settlement.pessimistic-proof-tx-config.retry-on-transient-failure]
initial-interval = "10s"
interval-multiplier-factor = 1.5
max-interval = "2m"
jitter = "1s"

[settlement.pessimistic-proof-tx-config.retry-on-not-included-on-l1]
initial-interval = "1m"
interval-multiplier-factor = 2.0
max-interval = "10m"
jitter = "10s"

[settlement.settlement-service-config]
